Bug 217231 - rtl8xxxu fails to get correct interface information
Summary: rtl8xxxu fails to get correct interface information
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_network-wireless@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-22 17:33 UTC by Michael
Modified: 2023-04-19 19:50 UTC (History)
0 users

See Also:
Kernel Version: 6.3-rc3
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Michael 2023-03-22 17:33:44 UTC
rtl8xxxu fails to get correct interface information:

$lsusb
ID 0bda:8179 Realtek Semiconductor Corp. RTL8188EUS 802.11n Wireless Network Adapter

efuse dump by:
$ insmod rtl8xxxu.ko debug=0x2000


[ 6817.834050] usbcore: registered new interface driver rtl8xxxu
[ 6820.924467] usb 3-1.1.2: new high-speed USB device number 25 using xhci_hcd
[ 6821.119936] usb 3-1.1.2: New USB device found, idVendor=0bda, idProduct=8179, bcdDevice= 0.00
[ 6821.119946] usb 3-1.1.2: New USB device strings: Mfr=1, Product=2, SerialNumber=3
[ 6821.119950] usb 3-1.1.2: Product: 802.11n NIC
[ 6821.119953] usb 3-1.1.2: Manufacturer: Realtek
[ 6821.501809] usb 3-1.1.2: Vendor: Realtek
[ 6821.501816] usb 3-1.1.2: Product: \x03802.11n NI
[ 6821.501819] usb 3-1.1.2: Serial: \xff\xff\xff\xff\xff\xff\xff\xff\xff\xff\xff
[ 6821.501822] usb 3-1.1.2: Dumping efuse for RTL8188EU (0x200 bytes):
[ 6821.501826] 00000000: 29 81 00 6c 0b 00 00 00 00 0c 00 00 00 00 ff ff  )..l............
[ 6821.501829] 00000010: 25 24 23 22 22 22 28 28 26 23 23 11 ff ff ff ff  %$#"""((&##.....
[ 6821.501832] 00000020: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501834] 00000030: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501837] 00000040: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501839] 00000050: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501841] 00000060: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501843] 00000070: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501844] 00000080: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501846] 00000090: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501848] 000000a0: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501850] 000000b0: ff ff ff ff ff ff ff ff 20 20 1a 00 00 00 00 00  ........  ......
[ 6821.501853] 000000c0: 00 00 00 10 00 00 00 00 00 03 ff ff ff ff ff ff  ................
[ 6821.501855] 000000d0: da 0b 79 81 43 66 00 00 c0 ca b0 67 e9 0a 03 52  ..y.Cf.....g...R
[ 6821.501857] 000000e0: 65 61 6c 74 65 6b 0d 0d 03 38 30 32 2e 31 31 6e  ealtek...802.11n
[ 6821.501859] 000000f0: 20 4e 49 43 ff ff ff ff ff ff ff ff ff ff ff ff   NIC............
[ 6821.501861] 00000100: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501863] 00000110: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501865] 00000120: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501867] 00000130: 81 ae 96 2d 03 93 96 11 fc 8c 00 11 9b ff ff ff  ...-............
[ 6821.501869] 00000140: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501871] 00000150: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501873] 00000160: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501875] 00000170: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501877] 00000180: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501879] 00000190: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501881] 000001a0: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501883] 000001b0: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501884] 000001c0: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501886] 000001d0: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501888] 000001e0: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501890] 000001f0: ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff ff  ................
[ 6821.501893] usb 3-1.1.2: RTL8188EU rev D (TSMC) romver 0, 1T1R, TX queues 2, WiFi=1, BT=0, GPS=0, HI PA=0
[ 6821.501899] usb 3-1.1.2: RTL8188EU MAC: 00:c0:ca:b0:67:e9
[ 6821.501903] usb 3-1.1.2: rtl8xxxu: Loading firmware rtlwifi/rtl8188eufw.bin
[ 6821.504916] usb 3-1.1.2: Firmware revision 11.1 (signature 0x88e1)

Note You need to log in before you can comment on or make changes to this bug.